+ Added option to hide globe icon in regional pricing
: Completely rewrote function to get inventory market prices (thanks Sharkiller!)
: Fixed numerous bugs with regional pricing
: Re-added profile link to Backpack.tf
: Fixed a bug where DRM warnings were displayed if DRM was mentioned in top reviews
- Removed "Hide Early Access From New Releases" feature as Steam now does this automatically

v5.2.1
-----
: Fixed plugin permissions issue causing some users not to upgrade to 5.2

v5.2
-----
+ Added regional price comparison feature which is fully configurable in options
+ Added sale information to wishlist entries
+ Added "ADD UNOWNED DLC TO CART" button on app pages
+ Added "Buy Wishlist" section to wishlist pages
: Fixed a bug where some inventory market links were not functioning correctly
: Fixed a bug where some non-marketable inventory items were incorrectly trying to find market prices

v5.1.1
-----
+ Added support for homepage highlighting on the Autumn / Spring sale
: Fixed a bug where some some strings weren't being translated properly
: Fixed a bug where one option wasn't able to be checked or unchecked

v5.1
-----
+ Added an "Add to Wishlist" button on community app hubs
+ Added spam comment hiding from Workshop submissions and profiles
+ Added market link support for TF2, Dota 2, and CS:GO inventory items
+ Added a "game you do own" filter to friend's all games page
+ Added "Report Bug / Suggest Feature" to Enhanced Steam menu
+ Added reset options button to options page, instantly resetting all options to default
: Restyled options page
: Restyled Greenlight banner and added to software, concept and collection items.
: Fixed a bug with options link within Enhanced Steam menu
: Fixed a bug where continuous scrolling wasn't working under some circumstances
: Fixed a bug where active market listings total wasn't calculating correctly for some users

v5.0
-----
+ Redesigned the navigation on the options page