@@ -1059,15 +1059,6 @@ function remove_about_menu() {
 	});
 }
 
-function remove_community_new() {
-	storage.get(function(settings) {
-		if (settings.hidecommunitynew === undefined) { settings.hidecommunitynew = true; storage.set({'hidecommunitynew': settings.hidecommunitynew}); }
-		if (settings.hidecommunitynew) {
-			$('.menuitem_new').replaceWith('');
-		}
-	});
-}
-
 function add_header_links() {
 	var supernav_content = document.querySelectorAll("#supernav .supernav_content");
 	if ($("#supernav").length > 0) {
@@ -4302,7 +4293,6 @@ $(document).ready(function(){
 		add_fake_country_code_warning();
 		remove_install_steam_button();
 		remove_about_menu();
-		remove_community_new();
 		add_header_links();
 		if (is_signed_in()) {
 			replace_account_name();
