@@ -68,7 +68,6 @@ var localized_strings,
 			options_library: "Show Library button in header",
 			options_library_f2p: "Show played free to play games and demos in library",
 			options_hide_about: "Hide About link",
-			options_hide_new_heading: "Hide \"NEW\" over username",
 			options_replace_account_name: "Replace account name with community name",
 			options_show_regionwarning: "Show warning if browsing in non-account region",
 			options_about_text: "<div class=\"header\">About <a href='http://www.enhancedsteam.com'>Enhanced Steam</a>:</div><p>Enhanced Steam is an Extension for Google Chrome that adds many new features to the Steam website.<p>Features include:<ul><li>Highlighting games you already own</li><li>Highlighting games on your wishlist</li><li>Correctly calculating bundle discounts based on games you already own</li><li>Showing you how much money you've spent on Steam for the lifetime of your account</li><li>Highlighting DLC you own on a game page</li><li>Fixing \"No Image Available\" game icons on your wishlist for any game or DLC</li><li>Pointing out titles with 3rd party DRM</li></ul><p>If you find this Extension useful, please consider donating.",
@@ -394,7 +393,6 @@ var localized_strings,
 				options_library: "Motrar botón de \"Biblioteca\" en el encabezado (en beta)",
 				options_library_f2p: "Mostrar las demos y juegos free to play jugados en la biblioteca",
 				options_hide_about: "Ocultar botón \"Acerca de\" en el encabezado",
-				options_hide_new_heading: "Ocultar \"NUEVO\" sobre el alias",
 				options_replace_account_name: "Reemplazar el nombre de la cuenta por el de la comunidad",
 				options_show_regionwarning: "Mostrar un aviso si estás en una región sin cuenta",
 				options_about_text: "Acerca de <a href='http://www.enhancedsteam.com' style='color:#8bc53f;'>Enhanced Steam</a>:<p>Enhanced Steam es una Extensión para Google Chrome que agrega un montón de nuevas características a la página de Steam.<p>Características Incluidas:<ul><li>Resaltar juegos que ya posees</li><li>Resaltar juegos de tu lista de deseados</li><li>Cálculos correctos de los descuentos de los paquetes basado en los juegos que ya posees</li><li>Mostrarte cuanto dinero gastaste en Steam en la vida de tu cuenta</li><li>Resaltar DLC que ya posees</li><li>Arreglar \"No Image Available\" en juegos o DLC de tu lista de deseados</li><li>Advertirte de titulos con DRM de terceros</li></ul><p>Si encuentras esta Extensión útil, por favor considera una donación.",
@@ -591,7 +589,6 @@ var localized_strings,
 				options_library: "Afficher le bouton Bibliothèque dans l'en-tête",
 				options_library_f2p: "Afficher les jeux gratuits auxquels vous avez joué et les démos dans la bibliothèque",
 				options_hide_about: "Cacher le lien À propos",
-				options_hide_new_heading: "Cacher \"NOUVEAU\" sur le nom d'utilisateur",
 				options_replace_account_name: "Remplacer le nom du compte par le nom communautaire",
 				options_show_regionwarning: "Afficher un avertissement si navigation dans une région non prise en compte",
 				options_about_text: "À propos d'<a href='http://www.enhancedsteam.com'>Enhanced Steam</a> :<p>Enhanced Steam est une extension pour Google Chrome qui ajoute de nombreuses nouvelles fonctionnalités pour le site de Steam.<p>Caractéristiques incluses :<ul><li>Le surlignage des jeux que vous possédez déjà</li><li>Le surlignage des jeux dans votre liste de souhaits</li><li>Le calcul correct des remises de pack basé sur les jeux que vous possédez déjà</li><li>L'affichage de l'argent que vous avez dépensé sur Steam pour la durée de vie de votre compte</li><li>Le surlignage des DLCs que vous possédez sur la page du jeu</li><li>La correction du \"No Image Available\" des icones de jeu dans votre liste de souhaits pour n'importe quel jeu ou DLC</li><li>L'affichage des titres avec des DRMs tierces/li></ul><p>Si vous trouvez cette extension utile, veuillez envisager de faire don.",
@@ -771,7 +768,6 @@ var localized_strings,
 				options_library: "Kütüphane butonunu sayfanın üst tarafında göster (BETA)",
 				options_library_f2p: "Ücretsiz oyunları ve demoları kütüphanede göster",
 				options_hide_about: "Hakkında linkini gizle",
-				options_hide_new_heading: "Profil adı üstündeki \"YENİ\" yazısını gizle",
 				options_replace_account_name: "Hesap ismi yerine topluluk ismini göster",
 				options_show_regionwarning: "Hesabımın dahil olduğu bölge dışında geziniyorsam uyar",
 				options_about_text: "<a href='http://www.enhancedsteam.com'>Enhanced Steam</a> hakkında:<p>Enhanced Steam, Steam web sitesine birçok özellik kazandıran bir Google Chrome uzantısıdır.<p>Bazı özellikler:<ul><li>Sahip olunan oyunları vurgulama</li><li>İstek listesindeki oyunları vurgulama</li><li>Sahip olduğunuz oyunlara göre bundle fiyatını doğru hesaplama</li><li>Steam'de şu ana kadar ne kadar para harcandığını gösterme</li><li>Oyun sayfasında sahip olunan DLCleri vurgulama</li><li>İstek listesindeki herhangi bir oyun veya DLC ikonu için \"Görüntü bulunamadı\" hatasını düzeltme</li><li>3. parti DLC'ye sahip oyunları gösterme</li></ul><p>Eğer bu uzantıyı yararlı bulduysanız, lütfen bağış yapmayı düşünün.",
@@ -934,7 +930,6 @@ var localized_strings,
 				options_library: "Mostra pulsante \"Libreria\" (BETA)",
 				options_library_f2p: "Mostra Demo e Free-to-Play giocati nella Libreria",
 				options_hide_about: "Nascondi pulsante \"Informazioni\"",
-				options_hide_new_heading: "Nascondi \"NOVITÀ\" accanto al nome utente",
 				options_replace_account_name: "Sostituisci nome dell'account con il nome della comunità",
 				options_show_regionwarning: "Mostra un avviso quando si visita una regione diversa dello Store",
 				options_about_text: "Informazioni su <a href='http://www.enhancedsteam.com'>Enhanced Steam</a>:<p>Enhanced Steam è un'estensione per Google Chrome che aggiunge molte nuove funzioni al sito web di Steam.<p>Caratteristiche:<ul><li>Evidenzia i giochi che possiedi</li><li>Evidenzia i giochi che desideri</li><li>Calcola gli sconti sui bundle in base ai giochi che già possiedi</li><li>Mostra i soldi spesi in totale sul tuo account di Steam</li><li>Evidenzia i DLC posseduti nella pagina del gioco</li><li>Corregge bug dell'icona \"No Image Available\" nella Lista desideri per giochi e DLC</li><li>Mostra avvisi quando sono presenti DRM di terze parti</li></ul><p>Se trovi utile questa estensione, considera di fare una donazione.",
@@ -1112,7 +1107,6 @@ var localized_strings,
 				options_library: "ヘッダーにライブラリボタンを表示",
 				options_library_f2p: "ライブラリにプレイしたフリートゥープレイゲームとデモを表示する",
 				options_hide_about: "ヘッダーのSTEAMとはリンクを非表示",
-				options_hide_new_heading: "ユーザー名上の\"NEW\"を非表示",
 				options_replace_account_name: "アカウント名をコミュニティ名で置き換える",
 				options_show_regionwarning: "非アカウントのリージョンで閲覧している場合警告を表示する",
 				options_about_text: "Enhanced Steamは、Steamのウェブサイトに多くの新機能を追加するGoogle Chrome用拡張機能です。<p>機能の詳細:<ul><li>すでに所有しているゲームの強調表示</li><li>ウィッシュリストにあるゲームの強調表示</li><li>すでに所有しているゲームに基づいた正確なバンドル値引き額の算出</li><li>今までSteamで消費した額の表示</li><li>ゲームのページで所有しているDLCの強調表示</li><li>ウィッシュリストであらゆるゲームまたはDLCの\"No Image Available\"画像の修正</li><li>サードパーティーDRMがあるタイトルの指摘</li></ul><p>この拡張が便利であると感じた場合は、寄付を検討してみてください。",
@@ -1319,7 +1313,6 @@ var localized_strings,
 				options_library: "Pokaż przycisk Biblioteka w nagłówku",
 				options_library_f2p: "Pokaż darmowe gry i dema w Bibliotece jeśli w nie grałeś",
 				options_hide_about: "Ukryj link \"O Steam\"",
-				options_hide_new_heading: "Ukryj \"NEW\" nad nazwą użytkownika",
 				options_replace_account_name: "Użyj nazwy społecznościowej zamiast nazwy konta",
 				options_show_regionwarning: "Pokaż ostrzeżenie o przeglądaniu niewłaściwego regionu",
 				options_about_text: "O <a href='http://www.enhancedsteam.com'>Enhanced Steam</a>:<p>Enhanced Steam to rozszerzenie dla Google Chrome, które dodaje wiele usprawnień do strony Steam.<p>Wybrane możliwości:<ul><li>podświetlanie posiadanych gier</li><li>podświetlanie gier z listy życzeń</li><li>Prawidłowe obliczanie zniżek bundlowych na podstawie posiadanych gier</li><li>Pokazywanie kwoty wydanej na Steam od założenia konta</li><li>podświetlanie posiadanych DLC na stronie gry</li><li>Poprawka błędu \"Brak Obrazu\dla gier i DLC</li><li>Ostrzeganie o dodatkowych DRM</li></ul><p>jeśli uważasz to rozszerzenie za przydatne, rozważ możliwość datku.",
@@ -1464,7 +1457,6 @@ var localized_strings,
 				options_library: "Mostrar botão Biblioteca no topo (BETA)",
 				options_library_f2p: "Mostrar jogos gratuitos para jogar (free to play) e demos jogadas na biblioteca",
 				options_hide_about: "Ocultar botão Sobre no topo",
-				options_hide_new_heading: "Ocultar \"NOVO\" sobre nome do usuário",
 				options_replace_account_name: "Substituir nome da conta por nome na comunidade",
 				options_show_regionwarning: "Mostrar aviso para jogos fora da região da conta",
 				options_about_text: "Sobre <a href='http://www.enhancedsteam.com'>Enhanced Steam</a>:<p>Enhanced Steam é uma extensão para Google Chrome que adiciona novos recursos na página do Steam.<p>Recursos incluem:<ul><li>Realce para jogos já comprados</li><li>Realce para jogos na Lista de Desejos</li><li>Cálculo correto de desconto em pacotes baseado em jogos já comprados</li><li>Mostrar quanto foi total gasto no Steam na vida de sua conta</li><li>Realça DLC já comprados na página do jogo</li><li>Corrige \"No Image Available\" em icones de jogos na Lista de Desejos de qualquer jogo ou DLC</li><li>Apresenta jogos com DRM de terceiros</li></ul><p>Se achou esta extensão útil, por favor considere uma doação.",
@@ -1705,7 +1697,6 @@ var localized_strings,
 				options_library: "在顶部显示库按钮",
 				options_library_f2p: "展示库存中玩过的免费游戏及试玩游戏",
 				options_hide_about: "隐藏“关于”链接",
-				options_hide_new_heading: "隐藏用户名旁的NEW",
 				options_replace_account_name: "用昵称替代用户名",
 				options_show_regionwarning: "跨区浏览时显示警告",
 				tag: "标签",
