@@ -207,7 +207,6 @@
 				<li class="header" id="options_header_text">Header</li>
 				<li><input type="checkbox" id="hideinstallsteambutton"><label for="hideinstallsteambutton" id="store_hide_install_text">Hide "Install Steam" button</label></li>
 				<li><input type="checkbox" id="hideaboutmenu"><label for="hideaboutmenu" id="store_hide_about_menu">Hide About link</label></li>
-				<li><input type="checkbox" id="hidecommunitynew"><label for="hidecommunitynew"id="store_hide_new_heading">Hide "NEW" over username</label></li>
 				<li><input type="checkbox" id="replaceaccountname"><label for="replaceaccountname" id="store_replace_account_name">Replace account name with community name</label></li>
 				<li class="header" id="store_general">General</li>
 				<li><input type="checkbox" id="showfakeccwarning"><label for="showfakeccwarning" id="header_showfakeccwarning_text">Show warning if browsing in non-account region</label></li>
